web/src/components/layout.module.css
@import '../styles/custom-media.css';
@import '../styles/custom-properties.css';

.blogPostLayoutGrid {
  margin: 0;
  padding: 0;
  list-style: none;
  display: grid;
  grid-template-areas: "main"
                        "nav";

  /* force nav to be on the right and don't overlap with content */
  @media(--media-min-medium) {
    grid-template-areas: "main nav";
    grid-template-columns: auto 70px;
  }

  /* hack: no grid on xl size to center blog post content */
  @media(--media-min-xlarge) {
    display: block;
    grid-template-columns: none;
  }
}

.content {
  grid-area: main;
  background: var(--color-white);
  min-height: calc(100% - 73px - 120px);

  @media (--media-min-small) {
    min-height: calc(100% - 91px - 155px);
  }
}

/* .footer {
  border-top: 1px solid var(--color-very-light-gray);

  @nest & a {
    color: inherit;
    text-decoration: none;

    @media (hover: hover) {
      @nest &:hover {
        color: var(--color-accent);
      }
    }
  }
}

.footerWrapper {
  box-sizing: border-box;
  max-width: 960px;
  padding: 4.5em 1.5em 1.5em;
  margin: 0 auto;

  @media (--media-min-small) {
    padding: 6em 2em 2em;
  }
} */

